# rustclicker

./: Cargo.toml  config.ron
bak/: Cargo.toml
bak/src/: main.rs  object.rs
src/: components.rs  main.rs  objects.rs  player.rs
src/scenes/: game.rs  mod.rs
