[package]

name = "clicker"
version = "0.1.0"
authors = [
    "Morgan <clicker@morganhe.in>",
]

[[bin]]
name = "clicker"

[dependencies]
piston = "0.37.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.47.0"
piston2d-opengl_graphics = "0.53.0"
find_folder = "0.3.0"
piston_window = "0.80.0"